be able to use hexo-deploy-git

--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,8 @@ theme: landscape
 
 # Deployment# D
 ## Docs: http://hexo.io/docs/deployment.html
+## Docs: http://hexo.io/docs/deployment.html
 deploy:
+  type: git 
   repo: git@github.com:tercanfurkan/tercanfurkan.github.io.git
   branch: master
